--- a/support/templates/slides.pharobeamerdesign.template
+++ b/support/templates/slides.pharobeamerdesign.template
@@ -3,18 +3,20 @@
 % add the PATH to retrieve cls and sty beamer styles files
 \makeatletter
 \providecommand*{\input@path}{}
-\edef\input@path{{book-result/support/beamer/}{../../support/beamer/}\input@path}% prepend
+\edef\input@path{{root/support/beamer/}\input@path}% prepend
 \makeatother
 
-\documentclass[aspectratio=169]{pharoslidesdesign} % format 16/9
+\documentclass[aspectratio=169]{pharoslides} % format 16/9
+% \documentclass{pharoslidesdesign} % format 4/3
 
-\graphicspath{{./}{book-result/}{../../}{book-result/support/beamer/imgs/}{../../support/beamer/imgs/}}
+\graphicspath{{./}{root/}{root/support/beamer/imgs/}}
 
 %Information to be included in the title page:
 \title{«& title»}
 \subtitle{«& subtitle»}
 \author{«& author»}
 \institute{«& complement»}
+\slidesid{«& slidesid»}
 
 \begin{document}
 
@@ -31,33 +33,25 @@
 \centering
 \large
 
-
 \vspace{2em}
 
-A course by «& author»
+A course by 
 
+\vspace{1.2em}
+
+Stéphane Ducasse\\
+\url{http://stephane.ducasse.free.fr}\\
 \vspace{1em}
-
-\url{«& complement»}
-
-%\hspace{-20px}\includegraphics[height=32px]{inriaLogo}\hspace{3em}\raisebox{7px}{and}
-%\hspace{3em}\raisebox{7px}{and}\hspace{3em}\raisebox{-6px}{\includegraphics[height=30px]{logoutop}}
+{\normalsize and}\\ 
+\vspace{1em}
+Luc Fabresse\\
+\url{http://car.mines-douai.fr/luc}
 
 \vspace{2em}
-
-%in collaboration with
-
-\vspace{1em}
-
-%\includegraphics[height=40px]{unisciellogo}\hskip 1.5em%
-%\raisebox{5px}{\includegraphics[height=30px]{unitlogo}}\hskip 2em%
-%\raisebox{8px}{\includegraphics[height=24px]{univLilleLogo}}\hskip 2em%
-%\raisebox{3px}{\includegraphics[height=29px]{logo-IMT}}\hskip 2em%
-%\raisebox{1px}{\includegraphics[height=32px]{minesDouaiLogo}}
 
 \vspace{2.5em}
 
-\includegraphics[width=50px]{by-nc-nd} \tiny \hskip 0.5em \raisebox{5px}{Inria 2016}
+\includegraphics[width=50px]{by-nc-nd} 
 
 \medskip
 
