passe + added draft lecture on protection

--- a/pillar.conf
+++ b/pillar.conf
@@ -45,7 +45,8 @@
 		  "Slides/1-ToReview/Intro-OOP.pillar",
 		  "Slides/1-ToReview/Intro-ObjectEssentialConcepts.pillar",
 		  "Slides/1-ToReview/Intro-Objectives.pillar",
-		  "Slides/1-ToReview/Basic-Blocks-Loops.pillar"
+		  "Slides/1-ToReview/Basic-Blocks-Loops.pillar",
+		  "Slides/1-ToReview/Design-ProtectionAndTyping.pillar"
       ],
       "headingLevelOffset" : 0,
       "configurations" : {
